# vulkanplay

./: .gitignore  CMakeLists.txt  CMakeSettings.json  VulkanPlay.kdev4  main.cpp
.kdev4/: VulkanPlay.kdev4
shaders/: frag.spv  simple.frag  simple.vert  vert.spv
